--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pomodoro",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://meowmanijado.github.io/pomodoro-clock",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
